--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <com.yc.rclayout.RCImageView
+        android:id="@+id/rciv_one"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@mipmap/test"
+        app:clip_background="true"
+        app:layout_constraintEnd_toStartOf="@+id/rciv_two"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:round_corner_bottom_left="20dp"
+        app:stroke_color="@color/colorAccent"
+        app:stroke_width="6dp" />
+
+    <com.yc.rclayout.RCImageView
+        android:id="@+id/rciv_two"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@mipmap/test"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:round_corner="20dp"
+        app:stroke_color="@color/colorAccent"
+        app:stroke_width="6dp" />
+
+    <com.yc.rclayout.RCImageView
+        android:id="@+id/three"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@mipmap/test"
+        app:clip_background="true"
+        app:layout_constraintEnd_toEndOf="@+id/rciv_one"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rciv_one"
+        app:round_as_circle="true"
+        app:stroke_color="@color/colorAccent"
+        app:stroke_width="6dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
