--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,10 @@
 
     <com.yc.rclayout.RCImageView
         android:id="@+id/rciv_one"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@mipmap/test"
-        app:clip_background="true"
-        app:layout_constraintEnd_toStartOf="@+id/rciv_two"
+        app:layout_constraintRight_toLeftOf="@+id/rciv_two"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:round_corner_bottom_left="20dp"
@@ -21,19 +20,20 @@
 
     <com.yc.rclayout.RCImageView
         android:id="@+id/rciv_two"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@mipmap/test"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/rciv_one"
         app:round_corner="20dp"
         app:stroke_color="@color/colorAccent"
         app:stroke_width="6dp" />
 
     <com.yc.rclayout.RCImageView
         android:id="@+id/three"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@mipmap/test"
         app:clip_background="true"
         app:layout_constraintEnd_toEndOf="@+id/rciv_one"
