--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,11 +46,21 @@
     <com.yc.rclayout.RCConstraintLayout
         android:layout_width="150dp"
         android:layout_height="150dp"
-        app:round_corner_bottom_left="20dp"
+        app:round_corner="20dp"
         app:stroke_color="@color/colorAccent"
+        app:shadow_color="#000000"
+        app:shadow_offsetY="8dp"
+        app:shadow_ratius="6dp"
         app:layout_constraintTop_toBottomOf="@+id/rciv_one"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/rciv_three"
-        app:stroke_width="6dp"/>
+        app:stroke_width="6dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@mipmap/test"/>
+
+    </com.yc.rclayout.RCConstraintLayout>
 
 </com.yc.rclayout.RCConstraintLayout>
