--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,60 +6,61 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-        <com.yc.rclayout.RCImageView
-            android:id="@+id/rciv_one"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@mipmap/test"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/rciv_two"
-            app:layout_constraintTop_toTopOf="parent"
-            app:round_corner_bottom_left="20dp"
-            app:stroke_color="@color/colorAccent"
-            app:stroke_width="6dp" />
-
-        <com.yc.rclayout.RCImageView
-            android:id="@+id/rciv_two"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@mipmap/test"
-            app:layout_constraintLeft_toRightOf="@+id/rciv_one"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:round_corner="20dp"
-            app:stroke_color="@color/colorAccent"
-            app:stroke_width="6dp" />
-
-        <com.yc.rclayout.RCImageView
-            android:id="@+id/rciv_three"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@mipmap/test"
-            app:clip_background="true"
-            app:layout_constraintEnd_toEndOf="@+id/rciv_one"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rciv_one"
-            app:round_as_circle="true"
-            app:stroke_color="@color/colorAccent"
-            app:stroke_width="6dp" />
-
-    <com.yc.rclayout.RCConstraintLayout
+    <com.yc.rclayout.RCImageView
+        android:id="@+id/rciv_one"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:src="@mipmap/test"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/rciv_two"
+        app:layout_constraintTop_toTopOf="parent"
+        app:round_corner_bottom_left="20dp"
+        app:stroke_color="@color/colorAccent"
+        app:stroke_width="6dp" />
+
+    <com.yc.rclayout.RCImageView
+        android:id="@+id/rciv_two"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@mipmap/test"
+        app:layout_constraintLeft_toRightOf="@+id/rciv_one"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:round_corner="20dp"
         app:stroke_color="@color/colorAccent"
+        app:stroke_width="6dp" />
+
+    <com.yc.rclayout.RCImageView
+        android:id="@+id/rciv_three"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@mipmap/test"
+        app:clip_background="true"
+        app:layout_constraintEnd_toEndOf="@+id/rciv_one"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rciv_one"
+        app:round_as_circle="true"
+        app:stroke_color="@color/colorAccent"
+        app:stroke_width="6dp" />
+
+    <com.yc.rclayout.RCConstraintLayout
+        android:id="@+id/rcc_layout"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintLeft_toRightOf="@+id/rciv_three"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rciv_one"
+        app:round_corner_bottom_left="20dp"
         app:shadow_color="#000000"
         app:shadow_offsetY="8dp"
         app:shadow_ratius="6dp"
-        app:layout_constraintTop_toBottomOf="@+id/rciv_one"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/rciv_three"
+        app:stroke_color="@color/colorAccent"
         app:stroke_width="6dp">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@mipmap/test"/>
+            android:src="@mipmap/test" />
 
     </com.yc.rclayout.RCConstraintLayout>
 
