--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,15 +47,18 @@
         android:id="@+id/rcc_layout"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        app:layout_constraintLeft_toRightOf="@+id/rciv_three"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rciv_one"
+        android:padding="8dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintLeft_toLeftOf="@+id/rciv_two"
+        app:layout_constraintRight_toRightOf="@+id/rciv_two"
+        app:layout_constraintTop_toBottomOf="@+id/rciv_two"
         app:round_corner_bottom_left="20dp"
         app:shadow_color="#000000"
         app:shadow_offsetY="8dp"
+        app:shadow_offsetX="8dp"
         app:shadow_ratius="6dp"
         app:stroke_color="@color/colorAccent"
-        app:stroke_width="6dp">
+        app:stroke_width="1dp">
 
         <ImageView
             android:layout_width="match_parent"
