--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingLeft="16dp"
+    android:paddingTop="16dp"
+    android:paddingRight="16dp"
+    app:round_corner="8dp"
+    app:shadow_color="#000000"
+    app:shadow_offsetY="6dp"
+    app:shadow_ratius="6dp"
     tools:context=".MainActivity">
 
     <com.yc.rclayout.RCImageView
@@ -34,7 +41,8 @@
         android:id="@+id/rciv_three"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@mipmap/test"
+        android:background="@mipmap/test"
+        android:scaleType="centerCrop"
         app:clip_background="true"
         app:layout_constraintEnd_toEndOf="@+id/rciv_one"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,23 +55,44 @@
         android:id="@+id/rcc_layout"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:padding="8dp"
-        android:background="@color/colorPrimary"
+        app:clip_background="true"
         app:layout_constraintLeft_toLeftOf="@+id/rciv_two"
         app:layout_constraintRight_toRightOf="@+id/rciv_two"
         app:layout_constraintTop_toBottomOf="@+id/rciv_two"
-        app:round_corner_bottom_left="30dp"
+        app:round_corner="8dp"
         app:shadow_color="#000000"
         app:shadow_offsetY="6dp"
         app:shadow_ratius="6dp"
         app:stroke_color="@color/colorAccent"
         app:stroke_width="1dp">
 
+        <com.yc.rclayout.RCImageView
+            android:id="@+id/iv_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:round_as_circle="true" />
+
+    </com.yc.rclayout.RCConstraintLayout>
+
+    <com.yc.rclayout.RCFrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rciv_three"
+        app:round_corner="6dp"
+        app:stroke_color="@color/colorAccent"
+        app:stroke_width="6dp">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@mipmap/test" />
 
-    </com.yc.rclayout.RCConstraintLayout>
+    </com.yc.rclayout.RCFrameLayout>
 
 </com.yc.rclayout.RCConstraintLayout>
