--- a/roundeLayout/src/main/res/values/attrs.xml
+++ b/roundeLayout/src/main/res/values/attrs.xml
@@ -77,6 +77,42 @@
     </declare-styleable>
 
     <!--假体：用于提示-->
+    <declare-styleable name="RCFrameLayout">
+        <attr name="round_as_circle" />
+        <attr name="round_corner" />
+        <attr name="round_corner_top_left" />
+        <attr name="round_corner_top_right" />
+        <attr name="round_corner_bottom_left" />
+        <attr name="round_corner_bottom_right" />
+        <attr name="stroke_color" />
+        <attr name="stroke_width" />
+        <attr name="clip_background" />
+        <attr name="shadow_sides" />
+        <attr name="shadow_color" />
+        <attr name="shadow_ratius" />
+        <attr name="shadow_offsetX" />
+        <attr name="shadow_offsetY" />
+    </declare-styleable>
+
+    <!--假体：用于提示-->
+    <declare-styleable name="RCLinearLayout">
+        <attr name="round_as_circle" />
+        <attr name="round_corner" />
+        <attr name="round_corner_top_left" />
+        <attr name="round_corner_top_right" />
+        <attr name="round_corner_bottom_left" />
+        <attr name="round_corner_bottom_right" />
+        <attr name="stroke_color" />
+        <attr name="stroke_width" />
+        <attr name="clip_background" />
+        <attr name="shadow_sides" />
+        <attr name="shadow_color" />
+        <attr name="shadow_ratius" />
+        <attr name="shadow_offsetX" />
+        <attr name="shadow_offsetY" />
+    </declare-styleable>
+
+    <!--假体：用于提示-->
     <declare-styleable name="RCImageView">
         <attr name="round_as_circle" />
         <attr name="round_corner" />
