--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,6 @@
     android:paddingTop="16dp"
     android:paddingRight="16dp"
     app:round_corner="8dp"
-    app:shadow_color="#000000"
-    app:shadow_offsetY="6dp"
-    app:shadow_ratius="6dp"
     tools:context=".MainActivity">
 
     <com.yc.rclayout.RCImageView
@@ -23,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:round_corner_bottom_left="20dp"
         app:stroke_color="@color/colorAccent"
+        app:clip_background="true"
         app:stroke_width="6dp" />
 
     <com.yc.rclayout.RCImageView
@@ -34,6 +32,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:round_corner="20dp"
+        app:clip_background="true"
         app:stroke_color="@color/colorAccent"
         app:stroke_width="6dp" />
 
@@ -64,7 +63,7 @@
         app:shadow_offsetY="6dp"
         app:shadow_ratius="6dp"
         app:stroke_color="@color/colorAccent"
-        app:stroke_width="1dp">
+        app:stroke_width="3dp">
 
         <com.yc.rclayout.RCImageView
             android:id="@+id/iv_image"
@@ -85,6 +84,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rciv_three"
         app:round_corner="6dp"
+        app:clip_background="true"
         app:stroke_color="@color/colorAccent"
         app:stroke_width="6dp">
 
@@ -94,5 +94,23 @@
             android:src="@mipmap/test" />
 
     </com.yc.rclayout.RCFrameLayout>
+
+    <com.yc.rclayout.RCLinearLayout
+        android:id="@+id/linear_layout"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintLeft_toRightOf="@+id/frame_layout"
+        app:layout_constraintTop_toBottomOf="@+id/rciv_three"
+        app:round_corner="6dp"
+        app:stroke_color="@color/colorAccent"
+        app:stroke_width="6dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@mipmap/test" />
+
+    </com.yc.rclayout.RCLinearLayout>
 
 </com.yc.rclayout.RCConstraintLayout>
