--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         app:clip_background="true"
+        android:background="@color/colorPrimary"
         app:layout_constraintLeft_toLeftOf="@+id/rciv_two"
         app:layout_constraintRight_toRightOf="@+id/rciv_two"
         app:layout_constraintTop_toBottomOf="@+id/rciv_two"
